--- a/Hoof/Web.config
+++ b/Hoof/Web.config
@@ -75,4 +75,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=MARVEL;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
