Added annual plan text resources

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -44,10 +44,21 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\AnnualPlan.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AnnualPlan.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\AnnualPlan.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AnnualPlan.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Common</CustomToolNamespace>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
