--- a/DataAccess.Test/DataAccess.Test.csproj
+++ b/DataAccess.Test/DataAccess.Test.csproj
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dao\HuntDaoTest.cs" />
+    <Compile Include="Entities\AnnualPlan\EmployeePlan.cs" />
+    <Compile Include="Entities\AnnualPlan\GamePlanTest.cs" />
     <Compile Include="Entities\HuntsmanTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
