--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4B1A750C-D6F1-48C5-B2FF-DFABD4D5052D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Domain</RootNamespace>
     <AssemblyName>Domain</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -31,8 +31,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,12 +52,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnnualPlan\AnnualPlanService.cs" />
+    <Compile Include="AnnualPlan\IAnnualPlanService.cs" />
+    <Compile Include="AnnualPlan\Models\AnnualPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\BarrierPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\CostPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\DamagedFieldPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\EmployeePlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\FieldPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\FodderPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\GamePlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\HuntEquipmentPlanModel.cs" />
+    <Compile Include="AnnualPlan\Models\TrunkFoodPlanModel.cs" />
+    <Compile Include="AnnualPlan\ViewModels\AnnualPlanViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj">
+      <Project>{170D4773-4FEF-4337-94AF-2B8A383343A9}</Project>
+      <Name>DataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
