--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -202,8 +202,9 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Hunt\Index.cshtml" />
     <Content Include="Views\AnnualPlan\Index.cshtml" />
+    <Content Include="Views\Hunt\Index.cshtml" />
+    <Content Include="Views\Hunt\MyHunts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
