--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -54,24 +54,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\DbContext.cs" />
-    <Compile Include="Dao\AnnualPlan\Cost\CostPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Cost\ICostPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Employee\EmployeePlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Employee\IEmployeePlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\EstimatedGameBeforeHunting\EstimatedGameBeforeHuntingPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\EstimatedGameBeforeHunting\IEstimatedGameBeforeHuntingPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\EstimatedGameCount30March\EstimatedGameCount30MarchPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\EstimatedGameCount30March\IEstimatedGameCount30MarchPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Field\FieldPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Field\IFieldPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Fodder\FodderPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\Fodder\IFodderPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\GameHuntPlan\GameHuntPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\GameHuntPlan\IGameHuntPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\HuntEquipment\HuntEquipmentPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\HuntEquipment\IHuntEquipmentPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\TrunkFood\ITrunkFoodPlanDao.cs" />
-    <Compile Include="Dao\AnnualPlan\TrunkFood\TrunkFoodPlanDao.cs" />
+    <Compile Include="Dao\Cost\CostPlanDao.cs" />
+    <Compile Include="Dao\Cost\ICostPlanDao.cs" />
+    <Compile Include="Dao\Employee\EmployeePlanDao.cs" />
+    <Compile Include="Dao\Employee\IEmployeePlanDao.cs" />
+    <Compile Include="Dao\GameCountBeforeHuntingSeason\GameCountBeforeHuntingSeasonPlanDao.cs" />
+    <Compile Include="Dao\GameCountBeforeHuntingSeason\IGameCountBeforeHuntingSeasonPlanDao.cs" />
+    <Compile Include="Dao\GameCountBefore10MarchPlan\GameCountBefore10MarchPlanDao.cs" />
+    <Compile Include="Dao\GameCountBefore10MarchPlan\IGameCountBefore10MarchPlanDao.cs" />
+    <Compile Include="Dao\Field\FieldPlanDao.cs" />
+    <Compile Include="Dao\Field\IFieldPlanDao.cs" />
+    <Compile Include="Dao\Fodder\FodderPlanDao.cs" />
+    <Compile Include="Dao\Fodder\IFodderPlanDao.cs" />
+    <Compile Include="Dao\GameHuntPlan\GameHuntPlanDao.cs" />
+    <Compile Include="Dao\GameHuntPlan\IGameHuntPlanDao.cs" />
+    <Compile Include="Dao\HuntEquipment\HuntEquipmentPlanDao.cs" />
+    <Compile Include="Dao\HuntEquipment\IHuntEquipmentPlanDao.cs" />
+    <Compile Include="Dao\TrunkFood\ITrunkFoodPlanDao.cs" />
+    <Compile Include="Dao\TrunkFood\TrunkFoodPlanDao.cs" />
     <Compile Include="Dao\DaoBase.cs" />
     <Compile Include="Dao\Game\GameDao.cs" />
     <Compile Include="Dao\Game\IGameDao.cs" />
@@ -81,15 +81,18 @@
     <Compile Include="Dao\Hunt\IHuntDao.cs" />
     <Compile Include="Dao\Region\IRegionDao.cs" />
     <Compile Include="Dao\Region\RegionDao.cs" />
-    <Compile Include="Entities\AnnualPlan\CostPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\EmployeePlan.cs" />
-    <Compile Include="Entities\AnnualPlan\EstimatedGameBeforeHuntPeriodPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\EstimatedGameCount30MarchPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\FieldPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\FodderPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\GameHuntPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\HuntEquipmentPlan.cs" />
-    <Compile Include="Entities\AnnualPlan\TrunkFoodPlan.cs" />
+    <Compile Include="Entities\CostPlan.cs" />
+    <Compile Include="Entities\EmployeePlan.cs" />
+    <Compile Include="Entities\GameCountBeforeHuntingSeasonPlan.cs" />
+    <Compile Include="Entities\GameCountBefore10March.cs" />
+    <Compile Include="Entities\FieldPlan.cs" />
+    <Compile Include="Entities\FodderPlan.cs" />
+    <Compile Include="Entities\GameHuntPlan.cs" />
+    <Compile Include="Entities\GameLoss.cs" />
+    <Compile Include="Entities\GameSettlementCountBefore10March.cs" />
+    <Compile Include="Entities\GameSettlementCountPlan.cs" />
+    <Compile Include="Entities\HuntEquipmentPlan.cs" />
+    <Compile Include="Entities\TrunkFoodPlan.cs" />
     <Compile Include="Entities\CodeTable.cs" />
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Entities\Hunt.cs" />
