--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -71,14 +71,16 @@
     <Compile Include="AnnualPlan\Models\HuntEquipmentPlanModel.cs" />
     <Compile Include="AnnualPlan\Models\TrunkFoodPlanModel.cs" />
     <Compile Include="AnnualPlan\ViewModels\AnnualPlanViewModel.cs" />
+    <Compile Include="GameLoss\GameLossService.cs" />
+    <Compile Include="GameLoss\IGameLossService.cs" />
     <Compile Include="Game\GameService.cs" />
     <Compile Include="Game\IGameService.cs" />
+    <Compile Include="GameLoss\Model\GameLossModel.cs" />
+    <Compile Include="GameLoss\ViewModel\GameLossViewModel.cs" />
     <Compile Include="Game\Model\GameModel.cs" />
     <Compile Include="Hunt\HuntService.cs" />
     <Compile Include="Hunt\IHuntService.cs" />
     <Compile Include="Hunt\Models\HuntCreateModel.cs" />
-    <Compile Include="Hunt\Models\HuntModel.cs" />
-    <Compile Include="Hunt\ViewModels\HuntCreateViewModel.cs" />
     <Compile Include="Hunt\ViewModels\HuntViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -93,5 +95,6 @@
       <Name>DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
