--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\GameClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AnnualPlan.Designer.cs">
       <AutoGen>True</AutoGen>
