Upgraded generating Annual Plan and managing Loss Games - I think it's good now

--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -68,12 +68,14 @@
     <Compile Include="Dao\GameCountFor10March\IGameCountFor10MarchDao.cs" />
     <Compile Include="Dao\GameHuntPlan\GameHuntPlanDao.cs" />
     <Compile Include="Dao\GameHuntPlan\IGameHuntPlanDao.cs" />
-    <Compile Include="Dao\GameLoss\GameLossDao.cs" />
-    <Compile Include="Dao\GameLoss\IGameLossDao.cs" />
     <Compile Include="Dao\HuntedGame\HuntedGameDao.cs" />
     <Compile Include="Dao\HuntedGame\IHuntedGameDao.cs" />
     <Compile Include="Dao\HuntEquipmentPlan\HuntEquipmentPlanDao.cs" />
     <Compile Include="Dao\HuntEquipmentPlan\IHuntEquipmentPlanDao.cs" />
+    <Compile Include="Dao\LossGame\ILossGameDao.cs" />
+    <Compile Include="Dao\LossGame\LossGameDao.cs" />
+    <Compile Include="Dao\Loss\ILossDao.cs" />
+    <Compile Include="Dao\Loss\LossDao.cs" />
     <Compile Include="Dao\MarketingYear\IMarketingYearDao.cs" />
     <Compile Include="Dao\MarketingYear\MarketingYearDao.cs" />
     <Compile Include="Dao\TrunkFoodPlan\ITrunkFoodPlanDao.cs" />
@@ -95,11 +97,12 @@
     <Compile Include="Dto\GameCountFor10MarchDto.cs" />
     <Compile Include="Dto\GameDto.cs" />
     <Compile Include="Dto\GameHuntPlanDto.cs" />
-    <Compile Include="Dto\GameLossDto.cs" />
     <Compile Include="Dto\HuntDto.cs" />
     <Compile Include="Dto\HuntedGameDto.cs" />
     <Compile Include="Dto\HuntEquipmentPlanDto.cs" />
     <Compile Include="Dto\HuntsmanDto.cs" />
+    <Compile Include="Dto\LossDto.cs" />
+    <Compile Include="Dto\LossGameDto.cs" />
     <Compile Include="Dto\MarketingYearDto.cs" />
     <Compile Include="Dto\RegionDto.cs" />
     <Compile Include="Dto\TrunkFoodPlanDto.cs" />
@@ -110,9 +113,10 @@
     <Compile Include="Entities\GameClass.cs" />
     <Compile Include="Entities\GameCountFor10March.cs" />
     <Compile Include="Entities\GameHuntPlan.cs" />
-    <Compile Include="Entities\GameLoss.cs" />
     <Compile Include="Entities\HuntedGame.cs" />
     <Compile Include="Entities\HuntEquipmentPlan.cs" />
+    <Compile Include="Entities\Loss.cs" />
+    <Compile Include="Entities\LossGame.cs" />
     <Compile Include="Entities\MarketingYear.cs" />
     <Compile Include="Entities\TrunkFoodPlan.cs" />
     <Compile Include="Entities\Game.cs" />
