--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\GameClass.cs" />
+    <Compile Include="Enums\GameType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AnnualPlan.Designer.cs">
       <AutoGen>True</AutoGen>
