--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\AnnualPlanController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HuntController.cs" />
+    <Compile Include="Controllers\LossController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -209,9 +210,9 @@
     <Content Include="Views\AnnualPlan\Plan.cshtml" />
     <Content Include="Views\Hunt\Index.cshtml" />
     <Content Include="Views\Hunt\MyHunts.cshtml" />
-    <Content Include="Views\Hunt\Loss.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\AnnualPlan\Index.cshtml" />
+    <Content Include="Views\Loss\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
