--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Hunt\ViewModels\HuntViewModel.cs" />
     <Compile Include="MarketingYear\IMarketingYearService.cs" />
     <Compile Include="MarketingYear\MarketingYearService.cs" />
+    <Compile Include="MarketingYear\Models\MarketingYearModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\IReportService.cs" />
     <Compile Include="Report\Models\MonthlyReportModel.cs" />
