--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -76,11 +76,12 @@
     <Compile Include="Enums\GameKind.cs" />
     <Compile Include="Enums\GameType.cs" />
     <Compile Include="Enums\HuntEquipment.cs" />
+    <Compile Include="Extensions\GameExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\AnnualPlan.Designer.cs">
+    <Compile Include="Resources\Text.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AnnualPlan.resx</DependentUpon>
+      <DependentUpon>Text.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -89,9 +90,9 @@
     <None Include="Wzor RPL 2018-2019.pdf" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\AnnualPlan.resx">
+    <EmbeddedResource Include="Resources\Text.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>AnnualPlan.Designer.cs</LastGenOutput>
+      <LastGenOutput>Text.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Common</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
