--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -88,7 +88,12 @@
     <Compile Include="MarketingYear\Models\MarketingYearModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\IReportService.cs" />
+    <Compile Include="Report\Models\MonthlyReportClassGameModel.cs" />
+    <Compile Include="Report\Models\MonthlyReportGameBaseModel.cs" />
+    <Compile Include="Report\Models\MonthlyReportGameModel.cs" />
+    <Compile Include="Report\Models\MonthlyReportKindGameModel.cs" />
     <Compile Include="Report\Models\MonthlyReportModel.cs" />
+    <Compile Include="Report\Models\MonthlyReportSubKindGameModel.cs" />
     <Compile Include="Report\ReportService.cs" />
   </ItemGroup>
   <ItemGroup>
