--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\DbContext.cs" />
+    <Compile Include="Dao\Catch\CatchDao.cs" />
+    <Compile Include="Dao\Catch\ICatchDao.cs" />
     <Compile Include="Dao\CostPlan\CostPlanDao.cs" />
     <Compile Include="Dao\CostPlan\ICostPlanDao.cs" />
     <Compile Include="Dao\EmploymentPlan\EmploymentPlanDao.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Dao\Hunt\IHuntDao.cs" />
     <Compile Include="Dao\Region\IRegionDao.cs" />
     <Compile Include="Dao\Region\RegionDao.cs" />
+    <Compile Include="Dto\CatchDto.cs" />
     <Compile Include="Dto\CostPlanDto.cs" />
     <Compile Include="Dto\EmploymentPlanDto.cs" />
     <Compile Include="Dto\FieldPlanDto.cs" />
@@ -106,6 +109,7 @@
     <Compile Include="Dto\MarketingYearDto.cs" />
     <Compile Include="Dto\RegionDto.cs" />
     <Compile Include="Dto\TrunkFoodPlanDto.cs" />
+    <Compile Include="Entities\Catch.cs" />
     <Compile Include="Entities\CostPlan.cs" />
     <Compile Include="Entities\EmploymentPlan.cs" />
     <Compile Include="Entities\FieldPlan.cs" />
