--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -64,6 +64,11 @@
     <Compile Include="Catch\Models\CatchCreateModel.cs" />
     <Compile Include="Catch\ViewModels\CatchViewModel.cs" />
     <Compile Include="GameClass\GameClassService.cs" />
+    <Compile Include="GameHuntPlan\GameHuntPlanService.cs" />
+    <Compile Include="GameHuntPlan\IGameHuntPlanService.cs" />
+    <Compile Include="GameHuntPlan\Models\GameHuntPlanModel.cs" />
+    <Compile Include="GameHuntPlan\ViewModels\GameHuntPlanViewModel.cs" />
+    <Compile Include="GameHuntPlan\ViewModels\HuntPlanViewModel.cs" />
     <Compile Include="GamePlan\GamePlanService.cs" />
     <Compile Include="GamePlan\IGamePlanService.cs" />
     <Compile Include="AnnualPlan\IAnnualPlanService.cs" />
