--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HuntController.cs" />
+    <Compile Include="Controllers\GameHuntPlanController.cs" />
     <Compile Include="Controllers\LossController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Global.asax.cs">
@@ -218,6 +219,8 @@
     <Content Include="Views\Catch\Index.cshtml" />
     <Content Include="Views\Catch\MyCaughts.cshtml" />
     <Content Include="Views\Report\MonthlyReport.cshtml" />
+    <Content Include="Views\GameHuntPlan\Index.cshtml" />
+    <Content Include="Views\GameHuntPlan\Plan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
